[gd_scene load_steps=102 format=3 uid="uid://dhg8xbngla50n"]

[ext_resource type="Texture2D" uid="uid://cekoqlwfe4vc2" path="res://Entities/Player/Art/Base Body/Head/Head-Idle.png" id="1_62kaq"]
[ext_resource type="Script" path="res://Entities/Player/player.gd" id="1_nbg82"]
[ext_resource type="PackedScene" uid="uid://cw86ntwlxqf3f" path="res://Entities/Player/playerGhost.tscn" id="2_3rlnn"]
[ext_resource type="Texture2D" uid="uid://c7dn4w6cj7qbv" path="res://Entities/Player/Art/Base Body/Head/Head-Run.png" id="2_r0hjg"]
[ext_resource type="Texture2D" uid="uid://bi0vgog5swue2" path="res://Entities/Player/Art/Base Body/Head/Head-Walk.png" id="3_2bgfk"]
[ext_resource type="Texture2D" uid="uid://j230a0y88mx8" path="res://Entities/Player/Art/Base Body/Body/Body-Idle.png" id="4_nyqxh"]
[ext_resource type="Texture2D" uid="uid://dkaincs2x7fwh" path="res://Entities/Player/Art/Base Body/Body/Body-Run.png" id="5_w55xk"]
[ext_resource type="Texture2D" uid="uid://lsgcjdypqh1p" path="res://Entities/Player/Art/Base Body/Body/Body-Walk.png" id="6_7socv"]
[ext_resource type="Texture2D" uid="uid://dhli62v56wf24" path="res://Entities/Player/Art/Base Body/Hand Back/Hand Back-Idle.png" id="7_w8dp7"]
[ext_resource type="Texture2D" uid="uid://dgpaay15npipq" path="res://Entities/Player/Art/Base Body/Hand Back/Hand Back-Run.png" id="8_4dshj"]
[ext_resource type="Texture2D" uid="uid://4qealmusddap" path="res://Entities/Player/Art/Base Body/Hand Back/Hand Back-Walk.png" id="9_d81g8"]
[ext_resource type="Texture2D" uid="uid://dcgwlua1su8ng" path="res://Entities/Player/Art/Base Body/Hand Front/Hand Front-Idle.png" id="10_343ev"]
[ext_resource type="Texture2D" uid="uid://c1pcullccrki8" path="res://Entities/Player/Art/Base Body/Hand Front/Hand Front-Run.png" id="11_x1c4e"]
[ext_resource type="Texture2D" uid="uid://bxphu5n8lfenj" path="res://Entities/Player/Art/Base Body/Hand Front/Hand Front-Walk.png" id="12_2tol7"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="15_lbb20"]
[ext_resource type="Script" path="res://addons/godot_state_charts/parallel_state.gd" id="16_63i02"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="16_xr65y"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="17_8kn7u"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="18_iux58"]

[sub_resource type="AtlasTexture" id="AtlasTexture_njq6c"]
atlas = ExtResource("1_62kaq")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4o7tl"]
atlas = ExtResource("1_62kaq")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_eksl0"]
atlas = ExtResource("1_62kaq")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvqgy"]
atlas = ExtResource("1_62kaq")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwts5"]
atlas = ExtResource("2_r0hjg")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_336rg"]
atlas = ExtResource("2_r0hjg")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsgp3"]
atlas = ExtResource("2_r0hjg")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_82e1g"]
atlas = ExtResource("2_r0hjg")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejyv2"]
atlas = ExtResource("2_r0hjg")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3rvle"]
atlas = ExtResource("2_r0hjg")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_be08a"]
atlas = ExtResource("2_r0hjg")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqn0h"]
atlas = ExtResource("2_r0hjg")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_addk6"]
atlas = ExtResource("3_2bgfk")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmjaj"]
atlas = ExtResource("3_2bgfk")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_brffj"]
atlas = ExtResource("3_2bgfk")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_et61t"]
atlas = ExtResource("3_2bgfk")
region = Rect2(144, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_refuv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_njq6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4o7tl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eksl0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvqgy")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwts5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_336rg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsgp3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_82e1g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejyv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3rvle")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_be08a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqn0h")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_addk6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmjaj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_brffj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_et61t")
}],
"loop": true,
"name": &"walk",
"speed": 12.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_gxs3q"]
atlas = ExtResource("4_nyqxh")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8pxf"]
atlas = ExtResource("4_nyqxh")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4nhne"]
atlas = ExtResource("4_nyqxh")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7tgf7"]
atlas = ExtResource("4_nyqxh")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4s63"]
atlas = ExtResource("5_w55xk")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_46teq"]
atlas = ExtResource("5_w55xk")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ww872"]
atlas = ExtResource("5_w55xk")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fbvd2"]
atlas = ExtResource("5_w55xk")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6hy6y"]
atlas = ExtResource("5_w55xk")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvqvr"]
atlas = ExtResource("5_w55xk")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uj172"]
atlas = ExtResource("5_w55xk")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_65ogv"]
atlas = ExtResource("5_w55xk")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_m41ge"]
atlas = ExtResource("6_7socv")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sj8y4"]
atlas = ExtResource("6_7socv")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1piwy"]
atlas = ExtResource("6_7socv")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_imng2"]
atlas = ExtResource("6_7socv")
region = Rect2(144, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_1glbw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxs3q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8pxf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4nhne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7tgf7")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4s63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_46teq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ww872")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fbvd2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hy6y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvqvr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uj172")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65ogv")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m41ge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sj8y4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1piwy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_imng2")
}],
"loop": true,
"name": &"walk",
"speed": 12.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_xbxu0"]
atlas = ExtResource("7_w8dp7")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1ktp"]
atlas = ExtResource("7_w8dp7")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uab3p"]
atlas = ExtResource("7_w8dp7")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pxili"]
atlas = ExtResource("7_w8dp7")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8a37"]
atlas = ExtResource("8_4dshj")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ywwsg"]
atlas = ExtResource("8_4dshj")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8s8bn"]
atlas = ExtResource("8_4dshj")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ax2a"]
atlas = ExtResource("8_4dshj")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wma7u"]
atlas = ExtResource("8_4dshj")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4trwp"]
atlas = ExtResource("8_4dshj")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6qv8"]
atlas = ExtResource("8_4dshj")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2sjf"]
atlas = ExtResource("8_4dshj")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vd1on"]
atlas = ExtResource("9_d81g8")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i62ef"]
atlas = ExtResource("9_d81g8")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d0pfy"]
atlas = ExtResource("9_d81g8")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8hkb"]
atlas = ExtResource("9_d81g8")
region = Rect2(144, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_lhuxv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbxu0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1ktp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uab3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pxili")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8a37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ywwsg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8s8bn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ax2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wma7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4trwp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6qv8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2sjf")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vd1on")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i62ef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d0pfy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8hkb")
}],
"loop": true,
"name": &"walk",
"speed": 12.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_r766h"]
atlas = ExtResource("10_343ev")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhemy"]
atlas = ExtResource("10_343ev")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcw0w"]
atlas = ExtResource("10_343ev")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2ghr"]
atlas = ExtResource("10_343ev")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ee46"]
atlas = ExtResource("11_x1c4e")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qj40p"]
atlas = ExtResource("11_x1c4e")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_aymor"]
atlas = ExtResource("11_x1c4e")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ca44"]
atlas = ExtResource("11_x1c4e")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hj4rn"]
atlas = ExtResource("11_x1c4e")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6lnbd"]
atlas = ExtResource("11_x1c4e")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_g4ryg"]
atlas = ExtResource("11_x1c4e")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_r85f0"]
atlas = ExtResource("11_x1c4e")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7skke"]
atlas = ExtResource("12_2tol7")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hnqs"]
atlas = ExtResource("12_2tol7")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mqu50"]
atlas = ExtResource("12_2tol7")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ftt6x"]
atlas = ExtResource("12_2tol7")
region = Rect2(144, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_5dwks"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r766h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhemy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcw0w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2ghr")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ee46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qj40p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aymor")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ca44")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hj4rn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6lnbd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g4ryg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r85f0")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7skke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hnqs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mqu50")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ftt6x")
}],
"loop": true,
"name": &"walk",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r2pu7"]
size = Vector2(11, 9)

[sub_resource type="Curve" id="Curve_nb30i"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.436364), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_5ggjt"]
curve = SubResource("Curve_nb30i")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_55uia"]
resource_local_to_scene = true
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 3.0
direction = Vector3(0, -1, 0)
initial_velocity_max = 25.0
gravity = Vector3(0, 0, 0)
tangential_accel_max = 15.0
scale_min = 2.0
scale_max = 4.0
scale_curve = SubResource("CurveTexture_5ggjt")
color = Color(0.956863, 0.956863, 0.956863, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gjkue"]
size = Vector2(15, 9)

[sub_resource type="Curve" id="Curve_rny4l"]
min_value = -360.0
max_value = 360.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, -360), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_pje6m"]
curve = SubResource("Curve_rny4l")

[sub_resource type="Gradient" id="Gradient_uuovj"]
resource_local_to_scene = true
offsets = PackedFloat32Array(0, 0.989619, 0.99308, 0.99654, 1)
colors = PackedColorArray(0.580392, 0.870588, 0.74902, 1, 0.985903, 0.943575, 0.958472, 1, 0.592366, 0.874862, 0.758214, 1, 0.976661, 0.992835, 0.986157, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ub1nm"]
gradient = SubResource("Gradient_uuovj")

[sub_resource type="Curve" id="Curve_u77m8"]
min_value = -200.0
max_value = 200.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_2ultx"]
curve = SubResource("Curve_u77m8")

[sub_resource type="Curve" id="Curve_lbkqq"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.0090909), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_bdoqj"]
curve = SubResource("Curve_lbkqq")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_kscsp"]
resource_local_to_scene = true
particle_flag_disable_z = true
emission_shape_scale = Vector3(1, 0, 0)
emission_shape = 1
emission_sphere_radius = 28.13
angle_min = 15.0
angle_max = 100.0
angle_curve = SubResource("CurveTexture_pje6m")
direction = Vector3(-1, 0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 100.0
orbit_velocity_min = 0.05
orbit_velocity_max = 0.1
gravity = Vector3(0, 0, 0)
linear_accel_max = 19.7
linear_accel_curve = SubResource("CurveTexture_2ultx")
scale_min = 0.0
scale_max = 2.0
scale_curve = SubResource("CurveTexture_bdoqj")
color_ramp = SubResource("GradientTexture1D_ub1nm")

[node name="player" type="CharacterBody2D"]
z_index = 40
position = Vector2(751, 386)
scale = Vector2(2, 2)
script = ExtResource("1_nbg82")
ghost_node = ExtResource("2_3rlnn")

[node name="身体" type="Node2D" parent="."]

[node name="头" type="AnimatedSprite2D" parent="身体"]
position = Vector2(0, 6)
sprite_frames = SubResource("SpriteFrames_refuv")
animation = &"walk"
offset = Vector2(0, -6)

[node name="身子" type="AnimatedSprite2D" parent="身体"]
position = Vector2(0, 6)
sprite_frames = SubResource("SpriteFrames_1glbw")
animation = &"idle"
offset = Vector2(0, -6)

[node name="左手" type="AnimatedSprite2D" parent="身体"]
position = Vector2(0, 6)
sprite_frames = SubResource("SpriteFrames_lhuxv")
animation = &"run"
offset = Vector2(0, -6)

[node name="右手" type="AnimatedSprite2D" parent="身体"]
position = Vector2(0, 6)
sprite_frames = SubResource("SpriteFrames_5dwks")
animation = &"walk"
offset = Vector2(0, -6)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_r2pu7")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(0, 6)
scale = Vector2(2, 2)
emitting = false
amount = 6
process_material = SubResource("ParticleProcessMaterial_55uia")
lifetime = 0.4
explosiveness = 0.8
fixed_fps = 60

[node name="检测遮挡" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="检测遮挡"]
position = Vector2(-0.5, 2.5)
shape = SubResource("RectangleShape2D_gjkue")

[node name="dashTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="跑步效果" type="GPUParticles2D" parent="."]
position = Vector2(0, 2)
emitting = false
amount = 50
process_material = SubResource("ParticleProcessMaterial_kscsp")
lifetime = 0.5
fixed_fps = 60

[node name="WeaponRoot" type="Node2D" parent="."]
position = Vector2(-1, 1)

[node name="StateChart" type="Node" parent="."]
script = ExtResource("15_lbb20")

[node name="并行状态" type="Node" parent="StateChart"]
script = ExtResource("16_63i02")

[node name="root" type="Node" parent="StateChart/并行状态"]
script = ExtResource("16_xr65y")
initial_state = NodePath("idle")

[node name="idle" type="Node" parent="StateChart/并行状态/root"]
script = ExtResource("17_8kn7u")

[node name="idle_to_run" type="Node" parent="StateChart/并行状态/root/idle"]
script = ExtResource("18_iux58")
to = NodePath("../../run")
event = &"idle_to_run"
delay_in_seconds = "0.0"

[node name="run" type="Node" parent="StateChart/并行状态/root"]
script = ExtResource("17_8kn7u")

[node name="run_to_idle" type="Node" parent="StateChart/并行状态/root/run"]
script = ExtResource("18_iux58")
to = NodePath("../../idle")
event = &"run_to_idle"
delay_in_seconds = "0.0"

[node name="dash" type="Node" parent="StateChart/并行状态"]
script = ExtResource("16_xr65y")
initial_state = NodePath("notDash")

[node name="dash" type="Node" parent="StateChart/并行状态/dash"]
script = ExtResource("17_8kn7u")

[node name="toNotDash" type="Node" parent="StateChart/并行状态/dash/dash"]
script = ExtResource("18_iux58")
to = NodePath("../../notDash")
event = &"toNotDash"
delay_in_seconds = "0.0"

[node name="notDash" type="Node" parent="StateChart/并行状态/dash"]
script = ExtResource("17_8kn7u")

[node name="toDash" type="Node" parent="StateChart/并行状态/dash/notDash"]
script = ExtResource("18_iux58")
to = NodePath("../../dash")
event = &"toDash"
delay_in_seconds = "0.0"

[connection signal="body_shape_entered" from="检测遮挡" to="." method="_on_检测遮挡_body_shape_entered"]
[connection signal="body_shape_exited" from="检测遮挡" to="." method="_on_检测遮挡_body_shape_exited"]
[connection signal="timeout" from="dashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="state_processing" from="StateChart/并行状态/root/idle" to="." method="_on_idle_state_processing"]
[connection signal="state_processing" from="StateChart/并行状态/root/run" to="." method="_on_run_state_processing"]
[connection signal="state_entered" from="StateChart/并行状态/dash/dash" to="." method="_on_dash_state_entered"]
[connection signal="state_processing" from="StateChart/并行状态/dash/dash" to="." method="_on_dash_state_processing"]
